version/2.0/_sources/index.rst.txt
Ansys SCADE Actions documentation
#################################

.. include:: ../../README.rst
   :start-after: .. readme_common_begins
   :end-before: .. readme_common_ends

For information on available actions and how to use them,
see each of the following cards:

.. grid:: 1 1 2 2
    :gutter: 2

    .. grid-item-card:: :octicon:`search` Query actions
       :link: query-actions/index
       :link-type: doc

       Retrieve SCADE installation directories and
       Python environments.

    .. grid-item-card:: :octicon:`tools` Tests actions
       :link: tests-actions/index
       :link-type: doc

       Set up Python environments for SCADE and
       run the test suite for a SCADE Python library.

    .. grid-item-card:: :octicon:`terminal` SCADE Suite actions
       :link: suite-actions/index
       :link-type: doc

       Execute SCADE Suite command line tools on models.

    .. grid-item-card:: :octicon:`terminal` SCADE Test actions
       :link: test-actions/index
       :link-type: doc

       Execute SCADE Test command line tools on models.

.. toctree::
   :hidden:
   :maxdepth: 3

   query-actions/index
   tests-actions/index
   suite-actions/index
   test-actions/index
